<resources>
    <string name="app_name">Activ Play</string>
    <string name="action_settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="join">J\nO\nI\nN</string>
    <string name="host">H\nO\nS\nT</string>
    <string name="activ_play_logo_here">Activ Play logo here</string>
    <string name="promptName">Name</string>
    <string name="room">Room</string>
    <string name="next">next</string>
    <string name="activ_play_logo">activ play logo</string>
    <string name="user">USER</string>
    <string name="privateParty">Private</string>
    <string name="publicParty">Public</string>
    <string name="createButton">C\nR\nE\nA\nT\nE</string>
    <string name="party_status">Party Status:</string>
    <string name="live_playlist">Live Playlist</string>
    <string name="connected_to">Connected to:</string>
    <string name="add">Add</string>
    <string name="user_recommendations">User Recommendations</string>
    <string name="disconnect">disconnect</string>
    <string name="about_us">About Us</string>
    <string name="user_settings">User Settings</string>
    <string name="host_settings">Host Settings</string>
    <string name="themes">Themes</string>
    <string name="music_settings">Music Settings</string>
</resources>
