<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hostActivity">

    <RadioGroup
        android:id="@+id/privacyRadioGroup"
        android:layout_width="273dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusPrompt"
        app:layout_constraintVertical_bias="0.092">

        <RadioButton
            android:id="@+id/privateButton"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/privateParty"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/publicButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/publicParty"
            android:textSize="30sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/statusPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/party_status"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createButton" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="106dp"
        android:layout_height="397dp"
        android:layout_marginTop="96dp"
        android:text="@string/createButton"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>