<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/joinButton"
        android:layout_width="110dp"
        android:layout_height="300dp"
        android:layout_marginStart="60dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/join"
        android:textSize="58sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hostButton" />

    <Button
        android:id="@+id/hostButton"
        android:layout_width="110dp"
        android:layout_height="300dp"
        android:layout_marginTop="44dp"
        android:text="@string/host"
        android:textSize="58sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/joinButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="909dp"
        android:layout_height="606dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/activ_play_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hostButton"
        app:srcCompat="@mipmap/ic_launcher_foreground" />
</androidx.constraintlayout.widget.ConstraintLayout>