<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hostMenu">

    <TextView
        android:id="@+id/roomNameText"
        android:layout_width="385dp"
        android:layout_height="119dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/activUsersText"
        android:layout_width="383dp"
        android:layout_height="65dp"
        android:layout_marginTop="44dp"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRecoButton" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/add"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomNameText" />

    <Button
        android:id="@+id/livePlaylistButton"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/live_playlist"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <Button
        android:id="@+id/userRecoButton"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/user_recommendations"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/livePlaylistButton" />

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activUsersText"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>